--- a/html/projects.html
+++ b/html/projects.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8" />
+        <style src="css/main.css"></style>
+        <script src="js/main.js"></script>
         <title>Matthew Cargill</title>
     </head>
     <!--this is page with overview of projects-->
