--- a/index.html
+++ b/index.html
@@ -5,30 +5,34 @@
         <title>Matthew Cargill</title>
     </head>
     <!--this is a landing page, with an overview of myself and what the site is about-->
-    <header>
-        <h1>Home</h1>
-    </header>
 
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="html/projects.html">Projects</a>
-        <a href="html/resume.html">Resume</a>
-    </nav>
+    <div id="siteGridContainer">
+        <header>
+            <h1>Home</h1>
+        </header>
 
-    <body>
-        <img src="assets/img/amicalola.jpeg">
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="html/projects.html">Projects</a>
+            <a href="html/resume.html">Resume</a>
+        </nav>
 
-        <p>
-            My name is Matthew Cargill, and I am an Electrical Engineering student at Georgia Tech. My degree specializations 
-            are signal processing and sensing. I am interested in a career developing new signal processing techniques for RF
-            or sensing applications. I anticipate graduating with my BS in December 2026, then participating in the BS/MS program
-            adding one more year for my MS.
-        </p>
+        <body>
+            <img src="assets/img/amicalola.jpeg">
 
-        <p>
-            On this website you can find documentation of the personal projects I have built, links to their code repositories,
-            my resume, and a detailed description of my skills/experience. You can reach me at mcargill3@gatech.edu.
-        </p>
-        
-    </body>
+            <p>
+                My name is Matthew Cargill, and I am an Electrical Engineering student at Georgia Tech. My degree specializations 
+                are signal processing and sensing. I am interested in a career developing new signal processing techniques for RF
+                or sensing applications. I anticipate graduating with my BS in December 2026, then participating in the BS/MS program
+                adding one more year for my MS.
+            </p>
+
+            <p>
+                On this website you can find documentation of the personal projects I have built, links to their code repositories,
+                my resume, and a detailed description of my skills/experience. You can reach me at mcargill3@gatech.edu.
+            </p>
+            
+        </body>
+    </div>
+
 </html>
