Re structured to be more robust

--- a/html/projects_subpages/rad.html
+++ b/html/projects_subpages/rad.html
@@ -12,15 +12,16 @@
     <body>
         <header>
             <h1>Projects - Radar</h1>
+            <nav>
+        
+                <a class="navLink" href="../../index.html">Home</a>
+                <a class="navLink" href="../projects.html">Projects</a>
+                <a class="navLink" href="../resume.html">Resume</a>
+                <a class="navLink" href="../contact.html">Contact </a>
+            </nav>
         </header>
 
-        <nav>
         
-            <a class="linkButton" href="../../index.html">Home</a>
-            <a class="linkButton" href="../projects.html">Projects</a>
-            <a class="linkButton" href="../resume.html">Resume</a>
-            <a class="linkButton" href="../contact.html">Contact Info</a>
-        </nav>
 
         <main>
             <h2>Planning</h2>
