made responsive for mobile

--- a/html/projects_subpages/rad.html
+++ b/html/projects_subpages/rad.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8" />
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../../css/main.css">
         <link rel="icon" href="../../assets/img/rand_icon.png" type="image/png">
-        <script src="../../js/main.js"></script>
         <title>Matthew Cargill</title>
+        
     </head>
     <!--this tells about my distortion pedal-->
 
     <body>
         <header>
-            <h1>Projects - Radar</h1>
+            <h1>FMCW Radar</h1>
             <nav>
         
                 <a class="navLink" href="../../index.html">Home</a>
