--- a/html/projects.html
+++ b/html/projects.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8" />
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../css/main.css"></link>
         <link rel="icon" href="../assets/img/rand_icon.png" type="image/png">
-        <script src=",,.js/main.js"></script>
         <title>Matthew Cargill</title>
     </head>
     <!--this is page with overview of projects-->
