--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
     <head>
         <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/main.css">
         <!--It just looks dumb to have that world symbol, so I added a random icon instead-->
         <link rel="icon" href="assets/img/rand_icon.png" type="image/png">
-
-        <script src="js/main.js"></script>
         <title>Matthew Cargill</title>
+
+        
     </head>
     <!--this is a landing page, with an overview of myself and what the site is about-->
 
