--- a/html/resume.html
+++ b/html/resume.html
@@ -58,7 +58,7 @@
 
             <h3>Experience</h3>
             <p>
-                Most recently, I have been working as an intern at GTRI. I have been assisting with the test and verification of spaceflight critical hardware. I have gained experience with RF test instruments such as signal generators, microwave amplifiers, signal analyzers, RF power sensors, and antennas. I have also learned how to automate the functioning of these instruments using a variety of methods. I've communicated with them via ethernet and USB on a variety of operating systems. I've used VISA, libusb, http transfers, and SCPI commands to interface with them. This type of automation saves enormous amounts of time when you have to run tests at a bunch of different frequencies, or with a bunch of different signals. 
+                Most recently, I have worked as an intern at GTRI. I have been assisting with the test and verification of spaceflight critical hardware. I have gained experience with RF test instruments such as signal generators, microwave amplifiers, signal analyzers, RF power sensors, and antennas. I have also learned how to automate the functioning of these instruments using a variety of methods. I've communicated with them via ethernet and USB on a variety of operating systems. I've used VISA, libusb, http transfers, and SCPI commands to interface with them. This type of automation saves enormous amounts of time when you have to run tests at a bunch of different frequencies, or with a bunch of different signals. 
             </p>
             
             <p>
